<resources>
    <string name="app_name">GameCompanion</string>
    <string name="tabChat">Chat</string>
    <string name="tabUser">User</string>
    <string name="tabComps">Comps</string>
    <string name="tabPatch">Patch</string>
    <string name="tabStreams">Twitch</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="hintUser">User</string>
    <string name="errorEmail">Email is not valid</string>
    <string name="errorPassword">Password is not valid</string>
    <string name="labelRegister">Register</string>
    <string name="btnLogOut">Log Out</string>
    <string name="txtLoginTwitch">Log in with Twitch</string>

</resources>